# periodiq

./: .tool-versions  pyproject.toml  requirements.txt
periodiq/: __init__.py
