[project]
name = "periodiq"
version = "0.12.2"
description = "Add your description here"
authors = [
  { name = "Étienne BERSAC" },
  { name = "CJ Lazell", email = "cjlazell@gmail.com" },
]
dependencies = ["dramatiq>=1.9.0", "pendulum>=2.1.2"]
readme = "README.md"
requires-python = ">= 3.8"
packages = ["periodiq"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["periodiq"]
